--- a/gui/requirements.txt
+++ b/gui/requirements.txt
@@ -1,6 +1,7 @@
+altair==4.2.0
 librosa==0.9.2
 numpy==1.22.4
-soundfile==0.11.0
+pandas==1.4.2
 streamlit==1.15.1
 tensorflow==2.11.0
 visualkeras==0.0.2
